# fluss-rust

./: .gitignore  BUILD.bazel  Cargo.toml  DEVELOPMENT.md  MODULE.bazel  ci.sh
.ignore/: fluss-rust-bazel-release-cpp-2026-02-13.md
bindings/cpp/: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Cargo.toml  MODULE.bazel  README.md  build.rs  ci.sh  protobuf_cc_proto_library.patch
bindings/cpp/examples/: consume_table.cpp  example.cpp  scan_from_ts.cpp
bindings/cpp/include/: fluss.hpp
bindings/cpp/src/: admin.cpp  connection.cpp  ffi_converter.hpp  lib.rs  table.cpp  types.rs
bindings/python/: Cargo.toml
bindings/python/example/: example.py
bindings/python/fluss/: __init__.pyi
bindings/python/src/: table.rs  utils.rs
crates/examples/: Cargo.toml
crates/examples/src/: debug_credentials.rs  debug_s3_download.rs  example_kv_table.rs  example_table.rs  scan_from_earliest.rs  scan_from_ts.rs  scan_log_table.rs
crates/fluss/: Cargo.toml
crates/fluss/src/: config.rs  error.rs  lib.rs  test_utils.rs
crates/fluss/src/bucketing/: mod.rs
crates/fluss/src/client/: admin.rs  connection.rs  credentials.rs  metadata.rs
crates/fluss/src/client/table/: append.rs  log_fetch_buffer.rs  lookup.rs  mod.rs  partition_getter.rs  remote_log.rs  scanner.rs  upsert.rs  writer.rs
crates/fluss/src/client/write/: accumulator.rs  batch.rs  broadcast.rs  bucket_assigner.rs  mod.rs  sender.rs  write_format.rs  writer_client.rs
crates/fluss/src/cluster/: cluster.rs
crates/fluss/src/compression/: arrow_compression.rs  mod.rs
crates/fluss/src/io/: file_io.rs  mod.rs  storage.rs  storage_fs.rs  storage_memory.rs  storage_s3.rs
crates/fluss/src/metadata/: data_lake_format.rs  datatype.rs  json_serde.rs  mod.rs  partition.rs  table.rs
crates/fluss/src/proto/: fluss_api.proto
crates/fluss/src/record/: arrow.rs  mod.rs
crates/fluss/src/record/kv/: kv_record.rs  kv_record_batch.rs  kv_record_batch_builder.rs  kv_record_read_context.rs  mod.rs  read_context.rs  test_util.rs
crates/fluss/src/row/: column.rs  datum.rs  decimal.rs  field_getter.rs  mod.rs  row_decoder.rs
crates/fluss/src/row/binary/: binary_writer.rs  mod.rs
crates/fluss/src/row/compacted/: compacted_key_writer.rs  compacted_row.rs  compacted_row_reader.rs  compacted_row_writer.rs  mod.rs
crates/fluss/src/row/encode/: compacted_key_encoder.rs  compacted_row_encoder.rs  mod.rs
crates/fluss/src/rpc/: api_key.rs  api_version.rs  convert.rs  fluss_api_error.rs  mod.rs  server_connection.rs  transport.rs
crates/fluss/src/rpc/message/: create_partition.rs  drop_partition.rs  get_security_token.rs  list_offsets.rs  list_partition_infos.rs  lookup.rs  mod.rs  produce_log.rs  put_kv.rs
crates/fluss/src/util/: mod.rs  murmur_hash.rs  varint.rs
crates/fluss/tests/: test_fluss.rs
crates/fluss/tests/integration/: admin.rs  fluss_cluster.rs  kv_table.rs  table.rs  table_remote_scan.rs  utils.rs
docs/: cpp-bazel-usage.md
tools/bazel/: prepare_bzlmod_release.sh
