# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
license = { workspace = true }
name = "fluss-examples"
rust-version = { workspace = true }
version = { workspace = true }


[dependencies]
fluss = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opendal = { workspace = true }
[[example]]
name = "example-table"
path = "src/example_table.rs"

[[example]]
name = "scan-log-table"
path = "src/scan_log_table.rs"

[[example]]
name = "scan-from-earliest"
path = "src/scan_from_earliest.rs"

[[example]]
name = "scan-local-only"
path = "src/scan_local_only.rs"

[[example]]
name = "debug-credentials"
path = "src/debug_credentials.rs"

[[example]]
name = "debug-s3-download"
path = "src/debug_s3_download.rs"