# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
name = "fluss"
build = "src/build.rs"

[features]
default = ["storage-memory", "storage-fs"]
storage-all = ["storage-memory", "storage-fs"]

storage-memory = ["opendal/services-memory"]
storage-fs = ["opendal/services-fs"]
integration_tests = []

[dependencies]
arrow = { workspace = true }
arrow-schema = "57.0.0"
byteorder = "1.5"
futures = "0.3"
clap = { workspace = true }
crc32c = "0.6.8"
linked-hash-map = "0.5.6"
prost = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "1.0"
tracing = "0.1"
tokio = { workspace = true }
parking_lot = "0.12"
bytes = "1.10.1"
dashmap = "6.1.0"
rust_decimal = "1"
ordered-float = { version = "4", features = ["serde"] }
parse-display = "0.10"
ref-cast = "1.0"
chrono = { workspace = true }
opendal = "0.53.3"
url = "2.5.7"
async-trait = "0.1.89"
uuid = { version = "1.10", features = ["v4"] }
tempfile= "3.23.0"

[dev-dependencies]
testcontainers = "0.25.0"
once_cell = "1.19"
test-env-helpers = "0.2.2"


[build-dependencies]
prost-build = {  version = "0.13.5"  }
